adding some grandma logic

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,3 +11,7 @@
     <input type="submit" value="Say it!">
   </form>
 </div>
+
+<% (1..10).to_a.each do |element| %> 
+<p> <%= element %> </p>
+<% end %> 
